manifests/loki-stack-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: loki-stack
  labels:
    name: loki-stack
