manifests/prometheus-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: prometheus
  labels:
    name: prometheus
