manifests/mainapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: mainapp-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mainapp
  template:
    metadata:
      labels:
        app: mainapp
    spec:
      volumes:
        - name: cache
          emptyDir: {}
        - name: config-volume
          configMap:
            name: mainapp-config
      containers:
        - name: dwk-mainapp-gen-timestamp
          image: ahojukka5/dwk-mainapp-gen-timestamp:latest
          volumeMounts:
            - name: cache
              mountPath: /cache
        - name: dwk-mainapp-read-timestamp
          image: ahojukka5/dwk-mainapp-read-timestamp:latest
          volumeMounts:
            - name: cache
              mountPath: /cache
            - name: config-volume
              mountPath: /etc/config
