manifests/secrets-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secrets-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secrets
  template:
    metadata:
      labels:
        app: secrets
    spec:
      containers:
        - name: dwk-secrets
          image: ahojukka5/dwk-secrets:latest
