manifests/todo-database-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: todo
  name: todo-database
spec:
  serviceName: todo-database
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:4
          ports:
            - name: mongo
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
