manifests/pingpong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - port: 9002
      protocol: TCP
      targetPort: 8002
