manifests/todo-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
