manifests/todo-database-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo
  name: todo-database-svc
  labels:
    app: mongo
spec:
  ports:
    - port: 27017
      name: web
  clusterIP: None
  selector:
    app: mongo
