manifests/todo-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-frontend
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
