manifests/exercises-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: exercises-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: mainapp-svc
          servicePort: 3000
      - path: /pingpong
        backend:
          serviceName: pingpong-svc
          servicePort: 8000
