manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dwk-ingress
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: mainapp-svc
          servicePort: 2345
      - path: /pingpong
        backend:
          serviceName: pingpong-svc
          servicePort: 9002
      - path: /api
        backend:
          serviceName: todo-backend-svc
          servicePort: 8000
