manifests/todo-frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-frontend-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: todo-frontend-svc
          servicePort: 3000
